Bug 193463 - konqueror isn't able to handle ubs.com: "Loading..."
Summary: konqueror isn't able to handle ubs.com: "Loading..."
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml ecma (show other bugs)
Version: 4.2.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2009-05-21 10:48 UTC by Janet
Modified: 2010-01-06 19:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2009-05-21 10:48:14 UTC
Version:            (using KDE 4.2.3)
OS:                Linux
Installed from:    Ubuntu Packages

When I try to load the stock tools on ubs.com konqueror either loops the page (user agent MSIE) or displays source code (any other user agent). A public page to test this is:
https://wb1.ubs.com/cache/fin/pub/gvu/quotes/markets_instruments/?locale=de_CH
(maybe you are asked to choose your locale)

In konq of 3.5.9 this page shows a "Loading..." text below the menu line and a note in the status line about "https://wb1.ubs.com/fin/themes/html/GZE_3_Common/edgestatic/js/GZE_Common.js: TypeError: Attempt to use a non-function object or a value as a function." But it doesn't loop or shows source code.

In konq of 4.2.3 that page succeeds in loading that part but failes completely in displaying it.
Comment 1 A. Spehr 2009-05-21 11:23:55 UTC
https://wb1.ubs.com/fin/pub/gvu/quotes/markets_instruments/
Might be a better choice of url, at least that's where I found it.

I see the same error given in the report above, as in the js "bug" dialog.

4.2.86 & tested with UA for ie 7.0
heh... pretending to be chrome on XP didn't help either.
Comment 2 Maksim Orlovich 2009-05-21 15:35:55 UTC
Can be fixed by:
--- xml/dom_textimpl.cpp        (revision 967193)                      
+++ xml/dom_textimpl.cpp        (working copy)                         
@@ -304,7 +304,7 @@                                                    
 DOMString CommentImpl::toString() const                               
 {                                                                     
     // FIXME: substitute entity references as needed!                 
-    return DOMString("<!--") + escapeHTML( nodeValue() ) + "-->";     
+    return DOMString("<!--") + nodeValue() + "-->";                   
 }                                                                     
                                                                       
 // ---------------------------------------------------------------------------


... Now I just need to bundle this with an another innerHTML change I have pending.
Comment 3 Janet 2009-12-18 15:01:05 UTC
Any news on this? The page still isn't viewable with konqueror of KDE 4.3.4.
Comment 4 Maksim Orlovich 2010-01-06 19:01:54 UTC
SVN commit 1070771 by orlovich:

We don't want to escape comments' innerHTML --- 
websites do silly string-munching strings with it; 
and HTML5 prescribes this behavior, too.

BUG: 193463


 M  +12 -12    dom_textimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070771
Comment 5 Maksim Orlovich 2010-01-06 19:09:49 UTC
SVN commit 1070774 by orlovich:

Regression test for #193463

CCBUG:193463


 A             baseline/dom/comment-innerHTML.html-dom  
 AM            baseline/dom/comment-innerHTML.html-dump.png  
 A             baseline/dom/comment-innerHTML.html-render  
 A             tests/dom/comment-innerHTML.html  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070774