We don't want to escape comments' innerHTML --- websites do silly string-munching strings with it; and HTML5 prescribes this behavior, too.

BUG: 193463

svn path=/trunk/KDE/kdelibs/; revision=1070771